--- a/RootService/appsettings.json
+++ b/RootService/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "Logger": {
+      "Path": "C:/Users/GANS/Desktop/SoapWcfHomework/Logs/Polly"
+    }
+  }
 }
+
