--- a/SampleService/nlog.config
+++ b/SampleService/nlog.config
@@ -19,11 +19,17 @@
 			fileName="${logDirectory}${date:format=yyyyMMdd}.${serviceName}.Requests.log"
 			layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
+    <target xsi:type="File" name="httpAllRootServiceFile"
+			fileName="${logDirectory}${date:format=yyyyMMdd}.${serviceName}.RootService.Requests.log"
+			layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+
+
     <target xsi:type="Console" name="serviceAllConsole"
 			layout="${level:truncate=4:tolower=true}\: ${logger}[0]${newline}${message}${exception:format=tostring}" />
   </targets>
   <rules>
     <logger name="SampleService.*" minlevel="Trace" writeTo="serviceAllFile, serviceAllConsole" />
-    <logger name="Microsoft.AspNetCore.HttpLogging.*" minlevel="Trace" writeTo="httpAllFile, serviceAllConsole" />
+    <logger name="Microsoft.AspNetCore.HttpLogging.*" minlevel="Trace" writeTo="httpAllFile" />
+    <logger name="Net.Http.Utils.HttpClient.RootServiceClient" minlevel="Trace" writeTo="httpAllRootServiceFile" />
   </rules>
 </nlog>
